@@ -11,6 +11,10 @@ The problem is that I do not know Perl, encoding is one of the thing I would be 
 Cheers,    
 Louis
 
+> Yes, this seems basically right. I've applied a modified version of this.
+> [[done]]
+> --[[Joey]] 
+
 
     diff --git a/IkiWiki/Plugin/calendar.pm b/IkiWiki/Plugin/calendar.pm
     index c7d2b7c..1345939 100644
