@@ -15,3 +15,6 @@ Is someone could test it and verify if it works or not?
 Thanks.
 
 Zut
+
+> This was discussed in [[bugs/Encoding_problem_in_calendar_plugin]]
+> and is now fixed. --[[Joey]] 
