@@ -5,6 +5,7 @@ ikiwiki (3.20120116) UNRELEASED; urgency=low
   * Switch to YAML::XS to work around insanity in YAML::Mo. Closes: #657533
   * cvs: Ensure non-text files are added in binary mode. (Amitai Schlair)
   * cvs: Various cleanups and testing. (Amitai Schlair)
+  * calendar, prettydate: Fix strftime encoding bug.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 16 Jan 2012 13:41:14 -0400
 
